tests/snapshots/integration_test__log_data@3cb058df1140585a2751dd5ad92072c5.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:30"
expression: result
info: "type=SYSTEM_RUNLEVEL msg=audit(1481076992.492:390): pid=1279 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:init_t:s0 msg='old-level=N new-level=3 comm=\"systemd-update-utmp\" exe=\"/usr/lib/systemd/systemd-update-utmp\" hostname=? addr=? terminal=? res=success'"
---
{
  "record_type": "SYSTEM_RUNLEVEL",
  "timestamp": 1481076992492,
  "id": 390,
  "fields": {
    "auid": null,
    "msg": {
      "addr": null,
      "comm": "systemd-update-utmp",
      "exe": "/usr/lib/systemd/systemd-update-utmp",
      "hostname": null,
      "new-level": "3",
      "old-level": "N",
      "res": "success",
      "terminal": null
    },
    "pid": "1279",
    "ses": "4294967295",
    "subj": {
      "level": {
        "sensitivity": "s0"
      },
      "module": "SELinux",
      "role": "system_r",
      "type": "init_t",
      "user": "system_u"
    },
    "uid": "root"
  }
}
