tests/snapshots/integration_test__log_data@3d5b1676eb44922624415dd309e40c5c.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/test.log:5"
expression: result
info: "type=USER_ACCT msg=audit(1170021601.340:294): user pid=13015 uid=0 auid=4294967295 subj=system_u:system_r:crond_t:s0-s0:c0.c1023 msg='PAM: accounting acct=root : exe=\"/usr/sbin/crond\" hostname=? addr=? terminal=cron res=success'"
---
{
  "Err": {
    "Parse": "error Char at:  pid=13015 uid=0 auid=4294967295 subj=system_u:system_r:crond_t:s0-s0:c0.c1023 msg='PAM: accounting acct=root : exe=\"/usr/sbin/crond\" hostname=? addr=? terminal=cron res=success'"
  }
}
