tests/snapshots/integration_test__log_data@3d72626569b9fbe065f92c546f0d1e41.snap
---
source: tests/integration_test.rs
expression: record
info: "type=BPRM_FCAPS msg=audit(1481077308.360:529): fver=0 fp=0000000000000000 fi=0000000000000000 fe=0 old_pp=0000000000000000 old_pi=0000000000000000 old_pe=0000000000000000 new_pp=0000001fffffffff new_pi=0000000000000000 new_pe=0000001fffffffff"
---
{
  "record_type": "BPRM_FCAPS",
  "timestamp": 1481077308360,
  "id": 529,
  "fields": {
    "fe": "0",
    "fi": [],
    "fp": [],
    "fver": "0",
    "new_pe": [
      "CHOWN",
      "DAC_OVERRIDE",
      "DAC_READ_SEARCH",
      "FOWNER",
      "FSETID",
      "KILL",
      "SETGID",
      "SETUID",
      "SETPCAP",
      "LINUX_IMMUTABLE",
      "NET_BIND_SERVICE",
      "NET_BROADCAST",
      "NET_ADMIN",
      "NET_RAW",
      "IPC_LOCK",
      "IPC_OWNER",
      "SYS_MODULE",
      "SYS_RAWIO",
      "SYS_CHROOT",
      "SYS_PTRACE",
      "SYS_PACCT",
      "SYS_ADMIN",
      "SYS_BOOT",
      "SYS_NICE",
      "SYS_RESOURCE",
      "SYS_TIME",
      "SYS_TTY_CONFIG",
      "MKNOD",
      "LEASE",
      "AUDIT_WRITE",
      "AUDIT_CONTROL",
      "SETFCAP",
      "MAC_OVERRIDE",
      "MAC_ADMIN",
      "SYSLOG",
      "WAKE_ALARM",
      "BLOCK_SUSPEND"
    ],
    "new_pi": [],
    "new_pp": [
      "CHOWN",
      "DAC_OVERRIDE",
      "DAC_READ_SEARCH",
      "FOWNER",
      "FSETID",
      "KILL",
      "SETGID",
      "SETUID",
      "SETPCAP",
      "LINUX_IMMUTABLE",
      "NET_BIND_SERVICE",
      "NET_BROADCAST",
      "NET_ADMIN",
      "NET_RAW",
      "IPC_LOCK",
      "IPC_OWNER",
      "SYS_MODULE",
      "SYS_RAWIO",
      "SYS_CHROOT",
      "SYS_PTRACE",
      "SYS_PACCT",
      "SYS_ADMIN",
      "SYS_BOOT",
      "SYS_NICE",
      "SYS_RESOURCE",
      "SYS_TIME",
      "SYS_TTY_CONFIG",
      "MKNOD",
      "LEASE",
      "AUDIT_WRITE",
      "AUDIT_CONTROL",
      "SETFCAP",
      "MAC_OVERRIDE",
      "MAC_ADMIN",
      "SYSLOG",
      "WAKE_ALARM",
      "BLOCK_SUSPEND"
    ],
    "old_pe": [],
    "old_pi": [],
    "old_pp": []
  }
}
