tests/snapshots/integration_test__log_data@3dedbce8a3184944c57624561abf2b8b.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-del-user.log:1"
expression: result
info: "type=DEL_USER msg=audit(1724970804.251:2682): pid=13860 uid=0 auid=4294967295 ses=4294967295 msg='op=delete-user id=65534 exe=\"/usr/sbin/userdel\" hostname=? addr=? terminal=? res=success'\u001dUID=\"root\" AUID=\"unset\" ID=\"nfsnobody\""
---
{
  "record_type": "DEL_USER",
  "timestamp": 1724970804251,
  "id": 2682,
  "fields": {
    "auid": null,
    "msg": {
      "addr": null,
      "exe": "/usr/sbin/userdel",
      "hostname": null,
      "id": 65534,
      "op": "delete-user",
      "res": "success",
      "terminal": null
    },
    "pid": "13860",
    "ses": "4294967295",
    "uid": "root"
  },
  "enrichment": {
    "AUID": "unset",
    "ID": "nfsnobody",
    "UID": "root"
  }
}
