tests/snapshots/integration_test__log_data@3e2202800521862674d2ab9fe262a2d6-2.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/auparse/test3.log:7"
expression: result
info: "node=auditdtest.a1959.org type=PROCTITLE msg=audit(1451781471.394:194436): proctitle=\"bash\""
---
{
  "record_type": "PROCTITLE",
  "timestamp": 1451781471394,
  "id": 194436,
  "node": "auditdtest.a1959.org",
  "fields": {
    "proctitle": "bash"
  }
}
