tests/snapshots/integration_test__log_data@40516c52aba7a65a772343aa9c504aaa.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-user-auth-2.log:1"
expression: result
info: "type=USER_AUTH msg=audit(1670330949.860:161339): pid=5519 uid=0 auid=4294967295 ses=4294967295 msg='op=PAM:authentication grantors=? acct=\"system-property('xsl:vendor')/>\" exe=\"/usr/bin/python3.8\" hostname=? addr=? terminal=? res=failed'\u001dUID=\"root\" AUID=\"unset\""
---
{
  "Err": {
    "Parse": "error Eof at: xsl:vendor')/>\" exe=\"/usr/bin/python3.8\" hostname=? addr=? terminal=? res=failed'\u001dUID=\"root\" AUID=\"unset\""
  }
}
