tests/snapshots/integration_test__log_data@4b0837d5065a448f86fb823ddae81b0f.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:20"
expression: result
info: "type=SERVICE_START msg=audit(1481076983.864:6): pid=1 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:init_t:s0 msg='unit=auditd comm=\"systemd\" exe=\"/usr/lib/systemd/systemd\" hostname=? addr=? terminal=? res=success'"
---
{
  "record_type": "SERVICE_START",
  "timestamp": 1481076983864,
  "id": 6,
  "fields": {
    "auid": null,
    "msg": {
      "addr": null,
      "comm": "systemd",
      "exe": "/usr/lib/systemd/systemd",
      "hostname": null,
      "res": "success",
      "terminal": null,
      "unit": "auditd"
    },
    "pid": "1",
    "ses": "4294967295",
    "subj": {
      "level": {
        "sensitivity": "s0"
      },
      "module": "SELinux",
      "role": "system_r",
      "type": "init_t",
      "user": "system_u"
    },
    "uid": "root"
  }
}
